# ASRProgram

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  VERSION  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/scripts/: gen_sine_wav.py  validate_outputs.py
.github/workflows/: asr_full.yml  ci.yml
config/: default.yaml
schemas/: segments.schema.json  words.schema.json
scripts/: auto_transcribe.bat  auto_transcribe.sh  download_model.py  package_release.sh  run.ps1  run.sh  run_transcribe.bat  run_transcribe.sh  setup.ps1  setup.sh  smoke_test.ps1  smoke_test.sh  verify_before_release.py  verify_env.py
src/: __init__.py
src/asr/: __init__.py  pipeline.py
src/asr/backends/: __init__.py  base.py  dummy.py  faster_whisper_backend.py  whisper_cpp_backend.py
src/cli/: main.py
src/utils/: audio.py  concurrency.py  config.py  errors.py  io.py  logging.py  manifest.py  metrics.py  profiling.py  rsync.py  schema.py  textnorm.py
tests/: test_backend_interface.py  test_concurrency_batch.py  test_config_layers.py  test_dummy_backend.py  test_integrity_and_locking.py  test_logging_metrics.py  test_pipeline_outputs.py  test_rsync_command.py  test_schema_words_segments.py  test_smoke_dummy_cli.py  test_unbuffered_logging.py  test_whisper_cpp_parse.py  test_word_timestamps.py
tools/: asr_quickstart.py
