[project]
name = "asrprogram"
version = "0.1.0"
description = "Round 1 skeleton for the ASRProgram dummy transcription pipeline"
authors = [
  { name = "ASRProgram Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
